Inserté la seccion de Contacto del hotel a todas las paginas, le añadí un facebook y un instagram.

--- a/Hotel/Habitaciones.html
+++ b/Hotel/Habitaciones.html
@@ -15,7 +15,7 @@
                 <li><a href="Habitaciones.html">Habitaciones</a></li>
                 <li><a href="Reservación.html">Reservación</a></li>
                 <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -34,6 +34,14 @@
             <h3>Suite de Lujo</h3>
             <p>Amplia, con áreas separadas, comodidades premium y servicios exclusivos.</p>
         </div>
+    </section>
+
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Email: info@hotelparaiso.com</p>
+        <p>Facebook: https://www.facebook.com/HotelParaiso</p>
+        <p>Instagram: https://www.instagram.com/HotelParaiso</p>
+        <p>Teléfono: +52 123 456 7890</p>
     </section>
     
     <footer>
