--- a/Hotel/PaginaPrincipal.html
+++ b/Hotel/PaginaPrincipal.html
@@ -50,6 +50,8 @@
     <section id="contacto">
         <h2>Contacto</h2>
         <p>Email: info@hotelparaiso.com</p>
+        <p>Facebook: https://www.facebook.com/HotelParaiso</p>
+        <p>Instagram: https://www.instagram.com/HotelParaiso</p>
         <p>Teléfono: +52 123 456 7890</p>
     </section>
     
