--- a/Hotel/Reservación.html
+++ b/Hotel/Reservación.html
@@ -59,6 +59,15 @@
             </div>
         </form>
     </main>
+
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Email: info@hotelparaiso.com</p>
+        <p>Facebook: https://www.facebook.com/HotelParaiso</p>
+        <p>Instagram: https://www.instagram.com/HotelParaiso</p>
+        <p>Teléfono: +52 123 456 7890</p>
+    </section>
+
     <footer>
         <p>&copy; 2025 Hotel Paraiso. Todos los derechos reservados.</p>
     </footer>
