--- a/Hotel/Servicios.html
+++ b/Hotel/Servicios.html
@@ -15,7 +15,7 @@
                 <li><a href="Habitaciones.html">Habitaciones</a></li>
                 <li><a href="Reservación.html">Reservación</a></li>
                 <li><a href="Servicios.html">Servicios</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -30,6 +30,14 @@
         </ul>
     </section>
     
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Email: info@hotelparaiso.com</p>
+        <p>Facebook: https://www.facebook.com/HotelParaiso</p>
+        <p>Instagram: https://www.instagram.com/HotelParaiso</p>
+        <p>Teléfono: +52 123 456 7890</p>
+    </section>
+
     <footer>
         <p>&copy; 2025 Hotel Paraíso. Todos los derechos reservados.</p>
     </footer>
