añadí un apartado para poder registrar una tarjeta bancaria para poder realizar pagos de la reservacion

--- a/Hotel/Reservación.html
+++ b/Hotel/Reservación.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Reservación de Hotel</h1>
+        <h1>¡Reserva tu habitación!</h1>
         <nav>
             <ul>
                 <li><a href="PaginaPrincipal.html">Inicio</a></li>
@@ -49,6 +49,22 @@
                     <option value="doble">Doble</option>
                     <option value="suite">Suite</option>
                 </select>
+            </div>
+            <div>
+                <label for="tarjeta">Número de Tarjeta:</label>
+                <input type="text" id="tarjeta" name="tarjeta" required>
+            </div>
+            <div>
+                <label for="titular">Nombre del Titular:</label>
+                <input type="text" id="titular" name="titular" required>
+            </div>
+            <div>
+                <label for="expiracion">Fecha de Expiración:</label>
+                <input type="month" id="expiracion" name="expiracion" required>
+            </div>
+            <div>
+                <label for="cvv">CVV:</label>
+                <input type="text" id="cvv" name="cvv" required>
             </div>
             <div>
                 <label for="comentarios">Comentarios:</label>
