primeras opciones de diseño de la pagina de habitaciones

--- a/Hotel/Habitaciones.html
+++ b/Hotel/Habitaciones.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Habitaciones</h1>
+        <h1>Conoce nuestras habitaciones</h1>
         <nav>
             <ul>
                 <li><a href="PaginaPrincipal.html">Inicio</a></li>
@@ -21,7 +21,7 @@
     </header>
     
     <section>
-        <h2>Conoce nuestras habitaciones</h2>
+        <h2>¡Tu confort es nuestra prioridad!</h2>
         <div class="habitacion">
             <h3>Habitación Sencilla</h3>
             <p>Pequeña, para una persona, básica y económica.</p>
