añadi un scrpt para la pagina principal

--- a/Hotel/PaginaPrincipal.html
+++ b/Hotel/PaginaPrincipal.html
@@ -5,19 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hotel Paraíso</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="scriptsPaginaPrincipal.js" defer></script> 
+
 </head>
 <body>
-    <header>
-        <h1>Hotel Paraíso</h1>
-        <nav>
-            <ul>
-                <li><a href="PaginaPrincipal.html">Inicio</a></li>
-                <li><a href="Habitaciones.html">Habitaciones</a></li>
-                <li><a href="Servicios.html">Servicios</a></li>
-                <li><a href="Reservación.html">Reservaciones</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
+    <header style="display: flex; align-items: center;">
+        <img src="logoHotel.png" alt="Logo de Hotel Paraíso" style="height: 120px; margin-right: 390px;">
+        <div>
+            <h1>Hotel Paraíso</h1>
+            <nav>
+                <ul style="display: flex; list-style: none; padding: 0; margin: 0;">
+                    <li><a href="PaginaPrincipal.html">Inicio</a></li>
+                    <li><a href="Habitaciones.html">Habitaciones</a></li>
+                    <li><a href="Servicios.html">Servicios</a></li>
+                    <li><a href="Reservación.html">Reservaciones</a></li>
+                    <li><a href="#contacto">Contacto</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     
     <section id="inicio">
