añadi imagenes para la pagina principal y un scrpt para que cambien cada 3 segundos

--- a/Hotel/Habitaciones.html
+++ b/Hotel/Habitaciones.html
@@ -92,7 +92,9 @@
         <p>Facebook: https://www.facebook.com/HotelParaiso</p>
         <p>Instagram: https://www.instagram.com/HotelParaiso</p>
         <p>Teléfono: +52 123 456 7890</p>        
-        <p>&copy; 2025 Hotel Paraíso. Todos los derechos reservados.</p>
     </section>
+    <footer>
+        <p>&copy; 2025 Hotel Paraíso. Todos los derechos reservados.</p>
+    </footer>
 </body>
 </html>
