--- a/Hotel/PaginaPrincipal.html
+++ b/Hotel/PaginaPrincipal.html
@@ -24,12 +24,38 @@
             </nav>
         </div>
     </header>
-    
     <section id="inicio">
         <h2>Bienvenido a Hotel Paraíso</h2>
         <p>Disfruta de una estancia inolvidable con las mejores comodidades y un servicio excepcional.</p>
     </section>
     
+    <div class="slideshow-container">
+        <div class="mySlides fade">
+            <img src="img1.png" style="width:100%">
+        </div>
+        <div class="mySlides fade">
+            <img src="img2.png" style="width:100%">
+        </div>
+        <div class="mySlides fade">
+            <img src="img3.png" style="width:100%">
+        </div>        
+        <div class="mySlides fade">
+            <img src="img4.png" style="width:100%">
+        </div>        
+        <div class="mySlides fade">
+            <img src="img5.png" style="width:100%">
+        </div>        
+        <div class="mySlides fade">
+            <img src="img6.png" style="width:100%">  
+        </div>      
+        <div class="mySlides fade">
+            <img src="img7.png" style="width:100%">
+        </div>        
+        <div class="mySlides fade">
+            <img src="img8.png" style="width:100%">
+        </div>
+    </div>
+
     <section id="habitaciones">
         <h2>Nuestras Habitaciones</h2>
         <div class="habitacion">
