un poco mas de diseño

--- a/Hotel/PaginaPrincipal.html
+++ b/Hotel/PaginaPrincipal.html
@@ -10,11 +10,11 @@
 </head>
 <body>
     <header style="display: flex; align-items: center;">
-        <img src="logoHotel.png" alt="Logo de Hotel Paraíso" style="height: 120px; margin-right: 390px;">
+        <img src="logoHotel.png" alt="Logo de Hotel Paraíso" style="height: 120px; margin-right: 20px;">
         <div>
             <h1>Hotel Paraíso</h1>
             <nav>
-                <ul style="display: flex; list-style: none; padding: 0; margin: 0;">
+                <ul style="display: flex; list-style: none; padding: 100; margin: 1000;">
                     <li><a href="PaginaPrincipal.html">Inicio</a></li>
                     <li><a href="Habitaciones.html">Habitaciones</a></li>
                     <li><a href="Servicios.html">Servicios</a></li>
@@ -56,28 +56,17 @@
         </div>
     </div>
 
-    <section id="habitaciones">
-        <h2>Nuestras Habitaciones</h2>
-        <div class="habitacion">
-            <h3>Habitación Estándar</h3>
-            <p>Confort y tranquilidad a un precio accesible.</p>
+    <section id="descripcion-historia">
+        <div class="column">
+            <h2>¿Quienes somos?</h2>
+            <p>Hotel Paraíso es un lugar de ensueño ubicado en la costa, ofreciendo vistas espectaculares y un ambiente relajante. Nuestro objetivo es proporcionar una experiencia única y memorable para todos nuestros huéspedes.</p>
         </div>
-        <div class="habitacion">
-            <h3>Suite de Lujo</h3>
-            <p>Experiencia exclusiva con vista al mar y jacuzzi privado.</p>
+        <div class="column">
+            <h2>Nuestra Historia</h2>
+            <p>Fundado en 1990, Hotel Paraíso ha sido un refugio para viajeros de todo el mundo. Con más de 30 años de experiencia, hemos perfeccionado el arte de la hospitalidad, combinando tradición y modernidad para ofrecer lo mejor a nuestros visitantes.</p>
         </div>
     </section>
-    
-    <section id="servicios">
-        <h2>Servicios</h2>
-        <ul>
-            <li>WiFi gratuito</li>
-            <li>Piscina</li>
-            <li>Gimnasio</li>
-            <li>Restaurante gourmet</li>
-        </ul>
-    </section>    
-    
+
     <section id="contacto">
         <h2>Contacto</h2>
         <p>Email: info@hotelparaiso.com</p>
