añadi fotos y diseño a la pagina de inicio

--- a/Hotel/PaginaPrincipal.html
+++ b/Hotel/PaginaPrincipal.html
@@ -26,7 +26,7 @@
     </header>
     <section id="inicio">
         <h2>Bienvenido a Hotel Paraíso</h2>
-        <p>Disfruta de una estancia inolvidable con las mejores comodidades y un servicio excepcional.</p>
+        <p>¡Disfruta de una estancia inolvidable con las mejores comodidades y un servicio excepcional!</p>
     </section>
     
     <div class="slideshow-container">
@@ -58,12 +58,14 @@
 
     <section id="descripcion-historia">
         <div class="column">
-            <h2>¿Quienes somos?</h2>
+            <h2>Descripción del Hotel</h2>
             <p>Hotel Paraíso es un lugar de ensueño ubicado en la costa, ofreciendo vistas espectaculares y un ambiente relajante. Nuestro objetivo es proporcionar una experiencia única y memorable para todos nuestros huéspedes.</p>
+            <img src="fotohotel1.png" alt="Foto del Hotel Paraíso" class="hotel-image">
         </div>
         <div class="column">
             <h2>Nuestra Historia</h2>
             <p>Fundado en 1990, Hotel Paraíso ha sido un refugio para viajeros de todo el mundo. Con más de 30 años de experiencia, hemos perfeccionado el arte de la hospitalidad, combinando tradición y modernidad para ofrecer lo mejor a nuestros visitantes.</p>
+            <img src="fotohotel2.png" alt="Foto del Hotel Paraíso" class="hotel-image">
         </div>
     </section>
 
