pagina principal termianda

--- a/Hotel/PaginaPrincipal.html
+++ b/Hotel/PaginaPrincipal.html
@@ -75,6 +75,12 @@
         <p>Facebook: https://www.facebook.com/HotelParaiso</p>
         <p>Instagram: https://www.instagram.com/HotelParaiso</p>
         <p>Teléfono: +52 123 456 7890</p>
+        <div class="iconos-contacto">
+            <a href="https://www.facebook.com/HotelParaiso" target="_blank"><img src="facebookicon.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/HotelParaiso" target="_blank"><img src="instaicon.png" alt="Instagram"></a>
+            <a href="mailto:info@hotelparaiso.com"><img src="emailicon.png" alt="Email"></a>
+            <a href="tel:+521234567890"><img src="telefonoicon.png" alt="Teléfono"></a>
+        </div>
     </section>
     
     <footer>
