pagina de reservacion completa

--- a/Hotel/Reservación.html
+++ b/Hotel/Reservación.html
@@ -41,7 +41,7 @@
                 <select id="habitacion" name="habitacion" required>
                     <option value="sencilla">Sencilla</option>
                     <option value="doble">Doble</option>
-                    <option value="suite">Suite</option>
+                    <option value="suite">Suite de lujo</option>
                 </select>
             </div>
             <div class="form-section">
