--- a/Hotel/Servicios.html
+++ b/Hotel/Servicios.html
@@ -23,14 +23,36 @@
         </div>
     </header>
     
-    <section>
+    <section class="servicios">
         <h2>Servicios que ofrecemos</h2>
-        <ul>
-            <li><strong>WiFi gratuito:</strong> Mantente conectado en todo el hotel sin costo adicional.</li>
-            <li><strong>Piscina:</strong> Relájate y disfruta de nuestra piscina al aire libre con servicio de bar.</li>
-            <li><strong>Gimnasio:</strong> Accede a nuestro gimnasio totalmente equipado las 24 horas.</li>
-            <li><strong>Restaurante gourmet y Buffete:</strong> Disfruta de una experiencia gastronómica con platillos de alta calidad.</li>
-        </ul>
+        <div class="servicio">
+            <img src="wifigratis.png" alt="WiFi gratuito">
+            <div>
+                <h3>WiFi gratuito</h3>
+                <p>Mantente conectado en todo el hotel sin costo adicional.</p>
+            </div>
+        </div>
+        <div class="servicio">
+            <img src="pisina con bar.png" alt="Piscina">
+            <div>
+                <h3>Piscina</h3>
+                <p>Relájate y disfruta de nuestra piscina al aire libre con servicio de bar.</p>
+            </div>
+        </div>
+        <div class="servicio">
+            <img src="gimnasiohotel.png" alt="Gimnasio">
+            <div>
+                <h3>Gimnasio</h3>
+                <p>Accede a nuestro gimnasio totalmente equipado las 24 horas.</p>
+            </div>
+        </div>
+        <div class="servicio">
+            <img src="restaurantehotel.png" alt="Restaurante gourmet y Buffete">
+            <div>
+                <h3>Restaurante gourmet y Buffete</h3>
+                <p>Disfruta de una experiencia gastronómica con platillos de alta calidad.</p>
+            </div>
+        </div>
     </section>
     
     <section id="contacto">
