--- a/Hotel/Habitaciones.html
+++ b/Hotel/Habitaciones.html
@@ -29,13 +29,13 @@
             <div>
                 <h3>Habitación Sencilla</h3>
                 <p>Pequeña, para una persona, básica y económica.</p>
-                <ul>
-                    <li>WIFI</li>
-                    <li>TV</li>
-                    <li>Ducha</li>
-                    <li>Teléfono</li>
-                    <li>Toallas</li>
-                </ul>
+                <div class="iconos">
+                    <img src="wifiicon.png" alt="WIFI" title="WIFI">
+                    <img src="tvicon.png" alt="TV" title="TV">
+                    <img src="duchaicon.png" alt="Ducha" title="Ducha">
+                    <img src="phoneicon.png" alt="Teléfono" title="Teléfono">
+                    <img src="toallaicon.png" alt="Toallas" title="Toallas">
+                </div>
             </div>
             <div class="precio">
                 <p>Desde</p>
@@ -48,14 +48,14 @@
             <div>
                 <h3>Habitación Doble</h3>
                 <p>Más grande, para dos personas, con comodidades adicionales.</p>
-                <ul>
-                    <li>WIFI</li>
-                    <li>TV</li>
-                    <li>Ducha</li>
-                    <li>Bañera</li>
-                    <li>Teléfono</li>
-                    <li>Toallas</li>
-                </ul>
+                <div class="iconos">
+                    <img src="wifiicon.png" alt="WIFI" title="WIFI">
+                    <img src="tvicon.png" alt="TV" title="TV">
+                    <img src="duchaicon.png" alt="Ducha" title="Ducha">
+                    <img src="bañeraicon.png" alt="Bañera" title="Bañera">
+                    <img src="phoneicon.png" alt="Teléfono" title="Teléfono">
+                    <img src="toallaicon.png" alt="Toallas" title="Toallas">
+                </div>
             </div>
             <div class="precio">
                 <p>Desde</p>
@@ -68,17 +68,17 @@
             <div>
                 <h3>Suite de Lujo</h3>
                 <p>Amplia, con áreas separadas, comodidades premium y servicios exclusivos.</p>
-                <ul>
-                    <li>WIFI</li>
-                    <li>TV</li>
-                    <li>Ducha</li>
-                    <li>Bañera</li>
-                    <li>Toallas</li>
-                    <li>Teléfono</li>
-                    <li>Caja fuerte</li>
-                    <li>Espacio de trabajo</li>
-                    <li>Minibar</li>
-                </ul>
+                <div class="iconos">
+                    <img src="wifiicon.png" alt="WIFI" title="WIFI">
+                    <img src="tvicon.png" alt="TV" title="TV">
+                    <img src="duchaicon.png" alt="Ducha" title="Ducha">
+                    <img src="bañeraicon.png" alt="Bañera" title="Bañera">
+                    <img src="toallaicon.png" alt="Toallas" title="Toallas">
+                    <img src="phoneicon.png" alt="Teléfono" title="Teléfono">
+                    <img src="caajaicon.png" alt="Caja fuerte" title="Caja fuerte">
+                    <img src="escritorioicon.png" alt="Espacio de trabajo" title="Espacio de trabajo">
+                    <img src="baricon.png" alt="Minibar" title="Minibar">
+                </div>
             </div>
             <div class="precio">
                 <p>Desde</p>
@@ -87,7 +87,6 @@
             </div>
         </div>
     </section>
-
     <section id="contacto">
         <h2>Contacto</h2>
         <p>Email: info@hotelparaiso.com</p>
