--- a/Hotel/Servicios.html
+++ b/Hotel/Servicios.html
@@ -10,7 +10,7 @@
     <header style="display: flex; align-items: center;">
         <img src="logoHotel.png" alt="Logo de Hotel Paraíso" style="height: 120px; margin-right: 20px;">
         <div>
-            <h1>Reserva tu habitación</h1>
+            <h1>Servicios</h1>
             <nav>
                 <ul style="display: flex; list-style: none; padding: 100; margin: 1000;">
                     <li><a href="PaginaPrincipal.html">Inicio</a></li>
